Refactor GpuDataManagerImpl state to use GpuMode

Simplify the GPU process fallback logic by combining |card_disabled_|
and |swiftshader_blocked_| into a single GpuMode enum |gpu_mode_|. This
will make it easier to add compositing fallback logic to
GpuDataManagerImpl.

Bug: 819474
Change-Id: I8a7d16f77086701a68cd8fd5127d1ff679452155
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1711636
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Sean Gilhuly <sgilhuly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#679711}

Former-commit-id: 952efd7d0719fe73745edb3afd9648b9e9d44d7f